# YOLOv8-TensorRT-CPP

./: CMakeLists.txt  package.xml
cmake/: YoloV8_TRTConfig.cmake
include/yolo_tensor_cpp/: yolov8.h
libs/tensorrt-cpp-api/: CMakeLists.txt  package.xml
libs/tensorrt-cpp-api/include/tensorrt-cpp-api/: engine.h
libs/tensorrt-cpp-api/src/: engine.cpp
src/: benchmark.cpp  cmd_line_util.h  object_detection_image.cpp  object_detection_video_stream.cpp  trunk_detection.cpp  yolov8.cpp
